@@ -17,6 +17,9 @@ source ./etf-env.sh
 # get Worker Node hostname
 gatheredAt=`hostname -f`
 
+# SITE_NAME for Pakiti
+export SITE_NAME=$eu_egi_sec_sitename
+
 # CE hostname
 service_uri=$eu_egi_sec_service_uri
 
@@ -39,6 +42,10 @@ for probe in `cat probe_list`; do
        ;;
    esac
 
+   # escape backslashes - we need 6 in the json - 12 here
+   sed -i 's/\\/\\\\\\\\\\\\/g' ${probe}.out
+
+   # escape doublequotes
    sed -i 's/"/\\"/g' ${probe}.out
 
    summary=$(head -1 ${probe}.out)
