@@ -1,3 +1,9 @@
+* Tue Mar 9 2021 Daniel Kouril <kouril@ics.muni.cz> and Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.1.3-0
+- check_CVE-2015-3245: Mitigation checks are skipped when the vulnerability isn't present.
+- HTCondor-CE etf_run.sh script:
+  * Set $SITE_NAME environment variable.
+  * Escape backslashes in the output of WN probes.
+
 * Tue Mar 9 2021 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.1.2-0
 - Setup a basic $PATH environment variable before executing probes on CREAM and HTCondor-CE.
 
